--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "pxbase.doc.tar.xz": 25ae0f3bbf19259aeedadc73effb7be011a33c68
-  "pxbase.tar.xz": ee86ec24bc8ebfacd124d64ed20256d6e2d8e88d
+  pxbase.doc.tar.xz: 63ab28de943f03a5d9b010c9b9cf20512ba093bb
+  pxbase.tar.xz: 8e1906b4b504f1be171f773807a25ca45ccb0e1c
